syntax = "proto3";
package wiradata.users;

option go_package = "pb/users;users";
option java_package = "com.wiradata.erpapplication.users";
option java_multiple_files = true;

import "users/group_message.proto";
import "users/generic_message.proto";

message ListGroupRequest {
  Pagination pagination = 1;
  string company_id = 2;
}

message GroupPaginationResponse {
  Pagination pagination = 1;
  uint32 count = 3;
}

message ListGroupResponse {
  GroupPaginationResponse pagination = 1;
  Group group = 2; 
}

message GrantAccessRequest {
  string group_id = 1;
  string access_id = 2;
}

service GroupService {
  rpc Create(Group) returns (Group) {}
  rpc Update(Group) returns (Group) {}
  rpc View(Id) returns (Group) {}
  rpc Delete(Id) returns (MyBoolean) {}
  rpc List(ListGroupRequest) returns (stream ListGroupResponse) {}
  rpc GrantAccess(GrantAccessRequest) returns (Message) {}
  rpc RevokeAccess(GrantAccessRequest) returns (Message) {}
}